--- a/src/components/PlayButton/PlayButton.module.scss
+++ b/src/components/PlayButton/PlayButton.module.scss
@@ -6,15 +6,12 @@
   cursor: pointer;
   height: 60px;
   padding: 20px;
-  gap: 30px;
   border-radius: 0.5em;
   background: none;
   transition: transform 0.2s;
 
-  @supports not (gap: 30px) {
-    & > *:not(:last-child) {
-      margin-right: 30px;
-    }
+  & > *:not(:last-child) {
+    margin-right: 30px;
   }
 
   &::before {
