--- a/src/screens/MainScreen/MainScreen.module.scss
+++ b/src/screens/MainScreen/MainScreen.module.scss
@@ -31,9 +31,12 @@
 
   @media screen and (max-width: 768px) {
     padding: 50px;
-    gap: 40px;
     flex-direction: column;
     align-items: flex-start;
+
+    & > *:not(:last-child) {
+      margin-bottom: 40px;
+    }
   }
 
   @media screen and (max-width: 568px) {
@@ -45,14 +48,11 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  gap: 40px;
   font-family: "Open Sans", sans-serif;
   width: 100%;
 
-  @supports not (gap: 40px) {
-    & > *:not(:last-child) {
-      margin-bottom: 40px;
-    }
+  & > *:not(:last-child) {
+    margin-bottom: 40px;
   }
 
   &__title {
@@ -89,12 +89,9 @@
   &__buttons {
     display: flex;
     align-items: center;
-    gap: 15px;
 
-    @supports not (gap: 15px) {
-      & > *:not(:last-child) {
-        margin-right: 15px;
-      }
+    & > *:not(:last-child) {
+      margin-right: 15px;
     }
   }
 
