--- a/src/widgets/ContactForm/ContactForm.module.scss
+++ b/src/widgets/ContactForm/ContactForm.module.scss
@@ -21,9 +21,12 @@
     border-radius: 10px;
     width: 100%;
     padding: 40px 30px;
-    gap: 30px;
     z-index: 100;
     transition: background 1s;
+
+    & > *:not(:last-child) {
+      margin-bottom: 30px;
+    }
 
     &_night {
       background: rgb(var(--white) / 0.1);
@@ -32,12 +35,6 @@
 
     &_bubble {
       background: rgb(var(--white));
-    }
-  }
-
-  @supports not (gap: 30px) {
-    & > *:not(:last-child) {
-      margin-bottom: 30px;
     }
   }
 
@@ -62,17 +59,14 @@
   &__inputs {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     min-width: 250px;
 
     @media screen and (max-width: 768px) {
       min-width: 100%;
     }
 
-    @supports not (gap: 20px) {
-      & > *:not(:last-child) {
-        margin-bottom: 20px;
-      }
+    & > *:not(:last-child) {
+      margin-bottom: 20px;
     }
   }
 
